# baio

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  classify_cli.py  docker-compose.yml  environment.yml  issueTemplate.md  metrics-report-sprint4.md  modal_app.py  package-lock.json  predict_class.py  pyproject.toml  requirements-dev.txt  requirements.txt  requirements.txt.orig  retrain_model.py
.github/: CODEOWNERS  ci_troubleshooting_guide.md
.github/ISSUE_TEMPLATE/: epic.md  issue.md
.github/workflows/: ci.yml  main.yml
api/: Dockerfile  index.py  llm_client.py  main.py
api/routes/: system.py
app/: Dockerfile  __init__.py  orchestrator_cli.py  streamlit_app.py
app/components/: __init__.py  input_forms.py  model_selection.py  sidebar.py  status_display.py
app/data_processing/: parsers.py  validators.py
app/pipeline/: __init__.py  classification.py
app/utils/: llm_client.py  session_utils.py
app/visualization/: __init__.py  charts.py  dashboard.py
backend/: Dockerfile  README.md
backend/app/: database.py  index.py  llm_client.py  main.py
backend/app/models/: __init__.py  classification.py  classifications.py  refresh_token.py  user.py
backend/app/routers/: __init__.py  auth.py  chat.py  classify.py  system.py  user.py
backend/app/schemas/: __init__.py  auth.py  chat.py  classification.py  db.py  models.py  routers.py  user.py
backend/app/services/: auth.py  classification.py  llm_client.py
backend/app/utils/: cookies.py  create_response  create_response.py  dna_validation.py  organism_patterns.py  sql_type_decorator.py  user.py
binary_classifiers/: evaluation.py  evo2_embedder.py  predict_class.py
binary_classifiers/data_extraction_scripts/: extract_fna_files.ipynb  fna_to_csv.ipynb  shorten_csv_data.ipynb
binary_classifiers/evo2_embeddings_scripts/: get_embeddings.ipynb  try.ipynb
binary_classifiers/feature_extraction_scripts/: kmers.ipynb
binary_classifiers/models/: random_forest_best_model.pkl
binary_classifiers/training_scripts/: evo2_randon_forest_classifier.ipynb  evo2_support_vector_machine_classifier.ipynb  randon_forest_classifier.ipynb  support_vector_machine_classifier.ipynb
binary_classifiers/transformers/: kmers_transformer.py  random_forest_vectorizer.pkl  support_vector_machine_vectorizer.pkl
configs/: binary_classifier.yaml
data_processing/: __init__.py  parsers.py
docs/: ARCHITECTURE.md  AUTHENTICATION.md  FASTQ format specification document.md  MILESTONE_2.md  MODEL_TRAINING_GUIDE.md  TODO.md  Technical documentation BAIO.md  community_guide_checkpoint_submission.md  design.md  evo2_fasta_pipeline.md  orchestrator_core.md  transformer_classification_guide.md
docs/archive/: architecture_checkpoint_submission.md  sprint_2_report.md
docs/checkpoints/: sprint_6_metrics_checkpoint_submission.md
docs/guides/: FASTQ.md  METAGENOMICS.md
docs/infrastructure/: EVO2_CI_FIX.md
docs/issues/: add-database-support.md  stabilize-evo2-test-ci.md
docs/metrics/: sprint_6_metrics_report.md  tracking_system.md
docs/models/: CLASSICAL_ML.md  TRANSFORMERS.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ArchitectureDiagram.tsx  ChatWidget.tsx  ConfigPanel.tsx  Header.tsx  LandingPage.tsx  ResultsDashboard.tsx  SequenceInput.tsx  SummaryCards.tsx
llm_bioinformatics_research/: .gitignore  README.md  babel.config.js  config.json  find-port.js  jest.config.js  killport.js  model.py  package-lock.json  package.json  server.js
llm_bioinformatics_research/.github/workflows/: cicd.yml
llm_bioinformatics_research/public/: config.json
llm_bioinformatics_research/src/: ApiDocumentation.css  ApiDocumentation.js  ApiDocumentation.test.js  App.css  App.js  App.test.js  HomeScreen.js  HomeScreen.test.js  LoginScreen.js  LoginScreen.test.js  References.css  References.js  References.test.js  ThemeContext.js  config.json  index.js  reportWebVitals.js  setupTests.js
llm_bioinformatics_research/src/ApiDocumentation/: ApiDocumentation.js
llm_bioinformatics_research/src/Context/: ThemeContext.js
llm_bioinformatics_research/src/Database/: Connection.js
llm_bioinformatics_research/src/HomeScreen/: HomeScreen.css  HomeScreen.js
llm_bioinformatics_research/src/LoginScreen/: LoginScreen.js
llm_bioinformatics_research/src/References/: References.css  References.js
llm_bioinformatics_research/src/SignupScreen/: SignupScreen.js
llm_clients/: __init__.py
metaseq/: README.md  __init__.py  dataio.py  evo2_client.py  evo2_embed.py  inference.py  models.py  train.py  types.py
prompting/: base.py  client.py  compare.py  logging.py  schemas.py  techniques.py  types.py
prompting/docs/: prompting_best_practices_md.md  prompting_overview.md  prompting_techniques_md.md
runs/metrics/: sprint_2_baseline.json
scripts/: classify_cli.py  classify_fasta_cluster.py  classify_fasta_local.py  collect_metrics.py  evaluate_binary_classifier.py  libra_submit.sh  predict_class.py  prompt_compare.py  retrain_model.py
tests/: conftest.py  test_api_classification.py  test_auth.py  test_auth_endpoints.py  test_binary_classifier_evaluation.py  test_classification.py  test_cli_orchestrator.py  test_data_processing.py  test_dataio.py  test_evo2_client.py  test_evo2_embedder.py  test_inference.py  test_integration_pipeline.py  test_metaseq_train.py  test_prompting_client.py  test_prompting_client_extra.py  test_prompting_compare.py  test_prompting_schemas.py  test_prompting_techniques.py  test_schemas.py  test_users.py  test_utils.py  test_visualization.py
tests/auth/: test_auth.py  test_auth_endpoints.py  test_permissions.py  test_refresh.py  test_schemas.py  test_users.py
tests/classification/: test_classification_schemas.py  test_integration_pipeline.py  test_predict_class_extra.py
tests/data/: test_data_processing.py
tests/models/: test_inference.py  test_kmers_transformer.py  test_models.py
(+32 files in other folders)
