[tool.poetry]
name = "baio"  # distribution name (can differ from import package)
version = "0.1.0"
description = "BAIO: LLM-Based Taxonomy Profiling & Open-Set Pathogen Detection"
authors = ["BAIO Development Team"]
readme = "README.md"
packages = [{ include = "metaseq" }]  # <— tell Poetry your code lives in ./metaseq

[tool.poetry.dependencies]
python = ">=3.9"
# add real runtime deps later, start empty to unblock build
# numpy = "*"
# pandas = "*"
# scikit-learn = "*"
# biopython = "*"
# hdbscan = "*"
# requests = "*"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
