[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baio"
version = "0.1.0"
description = "BAIO (Bioinformatics AI for Open-set detection) - A cutting-edge metagenomic analysis platform that leverages foundation models for DNA sequence analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = [
    # ---- Core / Python scientific stack ----
    "numpy==2.2.*",
    "scipy==1.14.*",
    "numba==0.61.*",
    "llvmlite==0.44.*",

    # ML / Data Science
    "scikit-learn==1.5.*",
    "pandas==2.2.*",
    "matplotlib==3.9.*",
    "seaborn==0.13.*",
    "plotly",
    "joblib>=1.3",

    # Bioinformatics
    "biopython>=1.85",
    "hdbscan==0.8.39",
    "umap-learn==0.5.7",

    # I/O & storage
    "pyarrow==17.*",
    "h5py",
    "zarr",

    # App / tooling
    "tqdm",
    "click",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "jsonschema",
    "rich",
    "requests>=2.32",
    "python-json-logger>=3.0",

    # FastAPI / API server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    # Testing
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "pytest-asyncio>=0.23",

    # Linting / formatting
    "black>=24.0",
    "flake8>=7.0",
    "isort>=5.13",
    "mypy>=1.10",
    "flake8-pyproject",

    # Type stubs
    "pandas-stubs==2.3.2.250926",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0",
    "types-jsonschema",

    # Dev utilities
    "watchdog>=3.0",
    "line-profiler>=4.1",
    "memory-profiler>=0.61",
]

# Notebook / interactive environment
notebook = [
    "jupyter>=1.0",
    "jupyterlab>=4.0",
    "ipywidgets",
    "ipykernel>=6.0",
]

# Evo2 foundation-model path (requires NVIDIA GPU with 16GB+ VRAM)
evo2 = [
    "torch==2.8.0",
    "transformers==4.56.1",
    "tokenizers==0.22.0",
    "accelerate>=0.30",
    "datasets>=2.19",
]

[project.urls]
Homepage = "https://github.com/oss-slu/baio"
Repository = "https://github.com/oss-slu/baio"
Issues = "https://github.com/oss-slu/baio/issues"
Documentation = "https://github.com/oss-slu/baio/blob/main/docs/"

[tool.setuptools]
packages = ["metaseq", "prompting", "data_processing", "binary_classifiers"]

[tool.setuptools.package-data]
metaseq = ["*.yml", "*.yaml", "*.json"]

# ---- Dev tool configs ----
[tool.black]
line-length = 88
target-version = ['py312']
include = '\\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["metaseq", "app"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E501"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
    "*.egg-info",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "biopython.*",
    "pysam.*",
    "hdbscan.*",
    "umap.*",
    "plotly.*",
    "seaborn.*",
    "evo2.*",
    "torch.*",
    "transformers.*",
    "accelerate.*",
    "datasets.*",
    "tokenizers.*",
    "fastapi.*",
    "pytest.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "data_processing.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dotenv.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["metaseq", "app"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'def __repr__',
    'if self.debug:',
    'if settings.DEBUG',
    'raise AssertionError',
    'raise NotImplementedError',
    'if 0:',
    'if __name__ == .__main__.:',
    'class .*\bProtocol\b.*:',
    '@(abc\\.)?abstractmethod',
]